[package]
name = "game"
version = "0.3.1" # TODO setup auto-incrementing on push
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2021"

[lib]
path = "src/game.rs"

[dependencies.evaluate]
path = "../evaluate"

[dependencies.gfx]
path = "../gfx"

[dependencies.look_up]
path = "../look_up"

[dependencies.models]
path = "../models"

[dependencies.probability]
path = "../probability"

[dependencies.platform_types]
path = "../platform_types"

[dependencies.xs]
path = "../xs"

[features]
skip-to = []
